# file-graph

./: README.md  file-graph.cabal  stack.yaml
app/: Main.hs
