name:                file-graph
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/MichaelBurge/file-graph#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Burge
maintainer:          michaelburge@pobox.com
copyright:           2017 Michael Burge
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable fg
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , graphviz
                     , fgl
                     , directory
                     , text
                     , filepath
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MichaelBurge/file-graph
